--- a/BloodBank.Management.Web/Views/BloodGroups/Edit.cshtml
+++ b/BloodBank.Management.Web/Views/BloodGroups/Edit.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Edit";
 }
 
-
 <div class="app-content">
     <div class="root-description">
-        <span>Home</span> / <span>Blood Group</span>  / <span>Edit Blood Group</span>
+        <span>Home</span> / <span>Blood Group</span>  / <span>Edit</span>
     </div>
 
     <div class="blood-unity-box-card">
@@ -18,7 +17,7 @@
                         <span class="blood-unity-box-card-header-icon">
                             <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
-                        <b>Edit Blood Group</b>
+                        <b>Edit</b>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -47,7 +46,6 @@
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -55,8 +53,6 @@
                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
-
                 <div class="form-group">
                     <div class="mt-3 col-sm-12 text-right">
                         <button type="submit" class="btn btn-default save-btn">
