--- a/BloodBank.Management.Web/Views/Donations/Create.cshtml
+++ b/BloodBank.Management.Web/Views/Donations/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="app-content">
     <div class="root-description">
-        <span>Home</span> / <span>Donation</span>  / <span>Add Donation</span>
+        <span>Home</span> / <span>Donation</span>  / <span>Add</span>
     </div>
 
     <div class="blood-unity-box-card">
@@ -18,7 +18,7 @@
                         <span class="blood-unity-box-card-header-icon">
                             <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
-                        <b>Add Donation</b>
+                        <b>Add</b>
                     </div>
                 </div>
                 <div class="col-sm-6">
