--- a/BloodBank.Management.Web/Views/Hospitals/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Hospitals/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="app-content">
     <div class="root-description">
-        <span>Home</span> / <span>Inventories</span>
+        <span>Home</span> / <span>Hospital</span>
     </div>
 
     <div class="blood-unity-box-card">
@@ -17,7 +17,7 @@
                         <span class="blood-unity-box-card-header-icon">
                             <i class="fa fa-table blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
-                        <b>Inventories</b>
+                        <b>Hospital</b>
                     </div>
                 </div>
                 <div class="col-sm-6">
@@ -25,7 +25,7 @@
                         <span class="blood-unity-box-card-header-icon">
                             <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
-                        @Html.ActionLink("Add Inventories", "Create")
+                        @Html.ActionLink("Add Hospital", "Create")
                     </button>
                 </div>
             </div>
