--- a/BloodBank.Management.Web/Views/Inventories/Edit.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Edit.cshtml
@@ -4,73 +4,98 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<div class="app-content">
+    <div class="root-description">
+        <span>Home</span> / <span>Inventories</span>  / <span>Edit</span>
+    </div>
 
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Inventory</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DonorId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.DonorId, new SelectList(ViewBag.Donors, "Id", "Name", Model?.DonorId == null ? 0 : Model.DonorId), new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DonorId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BloodGroupId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.BloodGroupId, new SelectList(ViewBag.BloodGroups, "Id", "Name", Model?.BloodGroupId == null ? 0 : Model.BloodGroupId), new { @class = "form-control", disabled = "disabled" })
-                @Html.ValidationMessageFor(model => model.BloodGroupId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ExpiryDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ExpiryDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ExpiryDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @*@Html.EditorFor(model => model.Status)*@
-                    @*@Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })*@
-                    @if (Model.Status)
-                    {
-                        <span class="badge badge-pill badge-danger" style="background-color:black;">Not Available</span>
-
-                    }
-                    else
-                    {
-                        <span class="badge badge-pill badge-success" style="background-color:black;">Available</span>
-                    }
+    <div class="blood-unity-box-card">
+        <div class="blood-unity-box-card-header">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="blood-unity-box-card-title">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        <b>Edit</b>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <button class="add-btn">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-arrow-left blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        @Html.ActionLink("Back", "Index", "Inventories")
+                    </button>
                 </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+        <div class="blood-unity-box-card-content">
+
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Id)
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.DonorId, htmlAttributes: new { @class = "control-label col-md-2 mb-1" })
+                    <div class="col-md-12">
+                        @Html.DropDownListFor(model => model.DonorId, new SelectList(ViewBag.Donors, "Id", "Name", Model?.DonorId == null ? 0 : Model.DonorId), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.DonorId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.BloodGroupId, htmlAttributes: new { @class = "control-label col-md-2 mb-1" })
+                    <div class="col-md-12">
+                        @Html.DropDownListFor(model => model.BloodGroupId, new SelectList(ViewBag.BloodGroups, "Id", "Name", Model?.BloodGroupId == null ? 0 : Model.BloodGroupId), new { @class = "form-control", disabled = "disabled" })
+                        @Html.ValidationMessageFor(model => model.BloodGroupId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ExpiryDate, htmlAttributes: new { @class = "control-label col-md-2 mb-1" })
+                    <div class="col-md-12">
+                        @Html.EditorFor(model => model.ExpiryDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ExpiryDate, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-12">
+                        <div class="checkbox">
+                            @if (Model.Status)
+                            {
+                                <span class="badge badge-pill badge-danger" style="background-color:black;">Not Available</span>
+
+                            }
+                            else
+                            {
+                                <span class="badge badge-pill badge-success" style="background-color:black;">Available</span>
+                            }
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="mt-3 col-sm-12 text-right">
+                        <button type="submit" class="btn btn-default save-btn">
+                            <i class="fa fa-plus pr-5" aria-hidden="true"></i> Update
+                        </button>
+                    </div>
+                </div>
             </div>
+            }
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval", "~/bundles/inventory")
