--- a/BloodBank.Management.Web/Views/Recipients/Delete.cshtml
+++ b/BloodBank.Management.Web/Views/Recipients/Delete.cshtml
@@ -4,69 +4,102 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Recipient</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.BloodGroup)
-        </dt>
+<div class="app-content">
+    <div class="root-description">
+        <span>Home</span> / <span>Recipient</span>  / <span>Delete</span>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.BloodGroup)
-        </dd>
+    <div class="blood-unity-box-card">
+        <div class="blood-unity-box-card-header">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="blood-unity-box-card-title">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        <b>Delete</b>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <button class="add-btn">
+                        <span class="blood-unity-box-card-header-icon">
+                            <i class="fa fa-arrow-left blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                        </span>
+                        @Html.ActionLink("Back", "Index", "Recipients")
+                    </button>
+                </div>
+            </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Hospital)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Hospital)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Mobile)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Mobile)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
         </div>
-    }
+        <div class="blood-unity-box-card-content">
+
+            <div>
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.BloodGroup)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.BloodGroup)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Hospital)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Hospital)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Mobile)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Mobile)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Email)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Email)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Address)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Address)
+                    </dd>
+
+                </dl>
+
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-group">
+                        <div class="mt-3 col-sm-12 text-right">
+                            <button type="submit" class="btn btn-default save-btn">
+                                <i class="fa fa-trash pr-5" aria-hidden="true"></i> Delete
+                            </button>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
 </div>
+
