--- a/BloodBank.Management.Web/Views/Inventories/Create.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Create.cshtml
@@ -68,7 +68,7 @@
                     @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2 mb-1" })
                     <div class="col-md-12">
                         <div class="checkbox">
-                            <span class="badge badge-pill badge-success" style="background-color:black;">Available</span>
+                            <span class="badge bg-success" style="background-color:black;">Available</span>
                         </div>
                     </div>
                 </div>
