--- a/BloodBank.Management.Web/Views/Inventories/Edit.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Edit.cshtml
@@ -71,12 +71,12 @@
                         <div class="checkbox">
                             @if (Model.Status)
                             {
-                                <span class="badge badge-pill badge-danger" style="background-color:black;">Not Available</span>
+                                <span class="badge bg-danger" style="background-color:black;">Not Available</span>
 
                             }
                             else
                             {
-                                <span class="badge badge-pill badge-success" style="background-color:black;">Available</span>
+                                <span class="badge bg-success" style="background-color:black;">Available</span>
                             }
                         </div>
                     </div>
