--- a/BloodBank.Management.Web/Views/Inventories/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Index.cshtml
@@ -67,11 +67,11 @@
                             @*@Html.DisplayFor(modelItem => item.Status)*@
                             @if (item.Status)
                             {
-                                <span class="badge badge-danger" style="background-color:black;">Not Available</span>
+                                <span class="badge bg-danger">Not Available</span>
                             }
                             else
                             {
-                                <span class="badge  badge-success" style="background-color:black;">Available</span>
+                                <span class="badge bg-success">Available</span>
                             }
                         </td>
                         <td>
