--- a/BloodBank.Management.Web/Views/Donors/Edit.cshtml
+++ b/BloodBank.Management.Web/Views/Donors/Edit.cshtml
@@ -15,7 +15,7 @@
                 <div class="col-sm-6">
                     <div class="blood-unity-box-card-title">
                         <span class="blood-unity-box-card-header-icon">
-                            <i class="fa fa-user-plus blood-unity-box-card-header-icon" aria-hidden="true"></i>
+                            <i class="fa fa-edit blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
                         <b>Edit</b>
                     </div>
