--- a/BloodBank.Management.Web/Views/Inventories/Details.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Details.cshtml
@@ -71,11 +71,11 @@
                 <dd>
                     @if (Model.Status)
                     {
-                        <span class="badge badge-pill badge-danger" style="background-color:black;">Not Available</span>
+                        <span class="badge bg-danger" style="background-color:black;">Not Available</span>
                     }
                     else
                     {
-                        <span class="badge badge-pill badge-success" style="background-color:black;">Available</span>
+                        <span class="badge bg-success" style="background-color:black;">Available</span>
                     }
                 </dd>
 
