--- a/BloodBank.Management.Web/Views/Donations/Create.cshtml
+++ b/BloodBank.Management.Web/Views/Donations/Create.cshtml
@@ -2,15 +2,16 @@
 
 @{
     ViewBag.Title = "Create";
+    string quantityError = ViewBag.QuantityError;
 }
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Donation</h4>
         <hr />
@@ -18,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DonorId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.DonorId, new SelectList(ViewBag.Donors, "Id", "Name", Model?.DonorId == null ? 0 : Model.DonorId), new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.DonorId, new SelectList(ViewBag.Donors, "Id", "Name"), new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DonorId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -53,12 +54,26 @@
             </div>
         </div>
     </div>
-}
 
+    <div id="QuantityInfo">
+
+    </div>
+
+    <div id="QuantityError">
+        @if (quantityError != null)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                Quantity is should be less than or equal to @quantityError
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+    </div>
+
+}
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryval", "~/bundles/Donation")
 }
