--- a/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="~/images/css/font-awesome.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
 <body>
     @if (ViewBag.Title != "Log in" && ViewBag.Title != "Register")
