--- a/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
+++ b/BloodBank.Management.Web/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
                     <ul class="dropdown-menu profile-dropdown">
                         <li><a class="dropdown-item" href="#"><i class="fa fa-user-o" aria-hidden="true"></i>Profile</a></li>
                         <li><a class="dropdown-item" href="#"><i class="fa fa-cog" aria-hidden="true"></i>Settings</a></li>
-                        <li><a class="dropdown-item" href="#"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
+                        <li><a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
                         <li>@*<a href="javascript:document.getElementById('logoutForm').submit()" class="dropdown-item"><i class="fa fa-sign-out" aria-hidden="true"></i> Log off</a>*@</li>
 
 
