--- a/BloodBank.Management.Web/Views/Donations/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Donations/Index.cshtml
@@ -74,9 +74,9 @@
                         </td>
                         <td>
 
-                            <a href="@Url.Action("Edit", "Donations", new {id = item.Id})" class="btn btn-primary edit-icon-btn">
+                            @*<a href="@Url.Action("Edit", "Donations", new {id = item.Id})" class="btn btn-primary edit-icon-btn">
                                 <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                            </a>
+                            </a>*@
                             <a href="@Url.Action("Details", "Donations", new {id = item.Id})" class="btn btn-primary view-icon-btn">
                                 <i class="fa fa-eye" aria-hidden="true"></i>
                             </a>
