--- a/BloodBank.Management.Web/Views/Donors/Create.cshtml
+++ b/BloodBank.Management.Web/Views/Donors/Create.cshtml
@@ -104,3 +104,9 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script>
+    $(document).ready(function () {
+        
+        alert("empty");
+    })
+</script>
