--- a/BloodBank.Management.Web/Views/Home/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Home/Index.cshtml
@@ -4,14 +4,49 @@
 
 <div class="app-content">
     <div class="row">
-        <div class="col-sm-4">
-            <div class="blood-unity-box-card">Donors</div>
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-header  app-custom-card-dashboard">
+                    Donors
+                </div>
+                <div class="card-body" >
+                    @*<h5 class="card-title">Active Donors</h5>*@
+                    <h1 style="margin-left: 35%;"><span class="badge bg-primary">12</span></h1>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <div class="blood-unity-box-card">Recipients</div>
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-header app-custom-card-dashboard">
+                    Recipients
+                </div>
+                <div class="card-body">
+                    @*<h5 class="card-title">Active Donors</h5>*@
+                    <h1 style="margin-left: 35%;"><span class="badge bg-primary">13</span></h1>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <div class="blood-unity-box-card">Hospitals</div>
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-header app-custom-card-dashboard">
+                    Hospitals
+                </div>
+                <div class="card-body">
+                    @*<h5 class="card-title">Active Donors</h5>*@
+                    <h1 style="margin-left: 35%;"><span class="badge bg-primary">15</span></h1>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="card">
+                <div class="card-header app-custom-card-dashboard">
+                    Donations
+                </div>
+                <div class="card-body">
+                    @*<h5 class="card-title">Total Donations</h5>*@
+                    <h1 style="margin-left: 35%;"><span class="badge bg-primary">16</span></h1>
+                </div>
+            </div>
         </div>
     </div>
 </div>
