--- a/BloodBank.Management.Web/Views/Inventories/Delete.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Delete.cshtml
@@ -66,7 +66,7 @@
                     <dd>
                         @if (Model.Status)
                         {
-                            <span class="badge bg-danger" style="background-color:black;">Not Available</span>
+                            <span class="badge bg-danger" style="background-color:black;">Already Donated</span>
                         }
                         else
                         {
