--- a/BloodBank.Management.Web/Views/Inventories/Edit.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Edit.cshtml
@@ -71,7 +71,7 @@
                         <div class="checkbox">
                             @if (Model.Status)
                             {
-                                <span class="badge bg-danger" style="background-color:black;">Not Available</span>
+                                <span class="badge bg-danger" style="background-color:black;">Already Donated</span>
 
                             }
                             else
