--- a/BloodBank.Management.Web/Views/Inventories/Index.cshtml
+++ b/BloodBank.Management.Web/Views/Inventories/Index.cshtml
@@ -67,7 +67,7 @@
                             @*@Html.DisplayFor(modelItem => item.Status)*@
                             @if (item.Status)
                             {
-                                <span class="badge bg-danger">Not Available</span>
+                                <span class="badge bg-danger">Already Donated</span>
                             }
                             else
                             {
