--- a/BloodBank.Management.Web/Content/Site.css
+++ b/BloodBank.Management.Web/Content/Site.css
@@ -413,4 +413,9 @@ a {
     }
 }
 
+.app-custom-card-dashboard {
+    background-color: #dc3545 !important;
+    color: #ffffff !important;
+}
+
 /* ============================== aside menu code End Here ========================  */
