--- a/BloodBank.Management.Web/Views/Donations/Details.cshtml
+++ b/BloodBank.Management.Web/Views/Donations/Details.cshtml
@@ -20,12 +20,12 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <button class="add-btn ml-5">
+                    @*<button class="add-btn ml-5">
                         <span class="blood-unity-box-card-header-icon">
                             <i class="fa fa-edit blood-unity-box-card-header-icon" aria-hidden="true"></i>
                         </span>
                         <a href="@Url.Action( "Edit", "Donations", new { id = Model.Id })">Edit</a>
-                    </button>
+                    </button>*@
                     <button class="add-btn">
                         <span class="blood-unity-box-card-header-icon">
                             <i class="fa fa-arrow-left blood-unity-box-card-header-icon" aria-hidden="true"></i>
